# still-manim

./: .gitignore  README.md  pyproject.toml
examples/: demo.py  export_test.py  hello_world.py  ideas.py  structure.py  tracing.py  tracing_demo.py
scripts/: upload-prod.sh  upload-test.sh
smanim/: __init__.py  bidirectional.py  canvas.py  config.py  constants.py  typing.py
smanim/bidirectional/: bidirectional.py  custom_linecache.py
smanim/mobject/: arc.py  brace.py  circle.py  graph.py  group.py  line.py  mobject.py  polygon.py  shape_matchers.py  svg_mobject.py  svg_object.py  text_mobject.py  tips.py  transformable.py  vmobject.py
smanim/mobject/geometry/: arc.py  circle.py  line.py  polygon.py  shape_matchers.py  tips.py
smanim/mobject/graphing/: coordinate_systems.py  functions.py  number_line.py  scale.py
smanim/mobject/programming/: box_list.py
smanim/mobject/svg/: brace.py  lambda_char.py  svg_mobject.py
smanim/mobject/text/: text_mobject.py
smanim/utils/: bezier.py  color.py  logger.py  space_ops.py  text_ops.py
tests/: coord_systems_test.py  graph_test.py
