[tool.poetry]
name = "still-manim"
# testing version
version = "1.0.8"
# prod version
# version = "0.1.1"
description = ""
authors = ["tom11my <tommy11jo@gmail.com>"]
readme = "README.md"
packages = [
    { include = "smanim" },
]


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
svg-py = "^1.4.3"
svgelements = "^1.9.6"
pillow = "^10.0.0"
networkx = "^3.2.1"
fonttools = "^4.50.0"
typing-extensions = "^4.11.0"

[tool.poetry.group.dev.dependencies]
twine = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["F403", "F405", "F821"]

